--- a/backend/backend-deployment.yml
+++ b/backend/backend-deployment.yml
@@ -29,11 +29,6 @@ spec:
             configMapKeyRef:
               name: app-config
               key: DATABASE_PORT
-        - name: DATABASE_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: DATABASE_USERNAME
         - name: DATABASE_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -43,17 +38,23 @@ spec:
           httpGet:
             path: /actuator/health
             port: 8080
-          initialDelaySeconds: 5
+          initialDelaySeconds: 20
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /actuator/health
             port: 8080
-          initialDelaySeconds: 5
+          initialDelaySeconds: 20
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         startupProbe:
           httpGet:
             path: /actuator/health
             port: 8080
-          initialDelaySeconds: 5
+          initialDelaySeconds: 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 10
