--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,20 @@
+# spring.application.name=k8s
+# # PostgreSQL Configuration
+# spring.datasource.url=jdbc:postgresql://postgres-container:5432/etudiants_db
+# spring.datasource.username=hamza
+# spring.datasource.password=gratuitement
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.application.name=k8s
+
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://postgres-container:5432/etudiants_db
-spring.datasource.username=hamza
-spring.datasource.password=gratuitement
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/etudiants_db
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
