--- a/database/postgres-service.yml
+++ b/database/postgres-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
+  name: postgres-container
   namespace: exam
 spec:
   selector:
-    app: postgres
+    app: postgres-container
   ports:
   - protocol: TCP
     port: 5432
